--- a/application/views/scripts/partials/navigation/adminmenu.phtml
+++ b/application/views/scripts/partials/navigation/adminmenu.phtml
@@ -6,7 +6,7 @@ $objectManager = new Application_Model_ObjectsManager($session->domainId);
 
 if (is_array($pages)) {
     foreach ($pages as $page) {
-        $counts[$page->resource] = $objectManager->getObjectsCount('Application_Model_' . $page->className);
+        $counts[$page->resource] = $objectManager->getObjectsCount($page->className);
         if ($this->navigation()->menu()->accept($page)) {
             $links[$page->resource] = $this->navigation()->menu()->htmlify($page);
         }
