--- a/application/views/scripts/objects/user-privileges.phtml
+++ b/application/views/scripts/objects/user-privileges.phtml
@@ -15,7 +15,7 @@ function prepareList() {
         return false;
     }
     
-    $('ul').find('li:has(ul)')
+    $('#listContainer').find('li:has(ul)')
     .bind('click', toggleList)
     .addClass('collapsed')
     .children('ul').hide();
