--- a/application/views/scripts/partials/navigation/adminmenu.phtml
+++ b/application/views/scripts/partials/navigation/adminmenu.phtml
@@ -48,6 +48,6 @@ if (isset($links)) {
     }
 
     foreach ($links as $link) {
-        echo ' | ' . $link;
+        echo ' <li> ' . $link . '</li>' . PHP_EOL;
     }
 }
