--- a/application/layouts/layout.phtml
+++ b/application/layouts/layout.phtml
@@ -12,7 +12,7 @@
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date();
             a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
+            m = s.getElementsByTagName(o)[0];
             a.async = 1;
             a.src = g;
             m.parentNode.insertBefore(a, m)
@@ -39,7 +39,7 @@
             if (a2) {
                 a2.onclick = function() {
                     $.post('<?php echo $this->url(array('controller' => 'auth', 'action' => 'logoff'), null, true); ?>')
-                            .done(function(data) {
+                    .done(function(data) {
                         window.location.assign("<?php echo $this->url(array('controller' => 'index', 'action' => 'index'), null, true) ?>");
                     });
                 }
@@ -48,10 +48,10 @@
     </script> 
 </head>
 <body>
-    <div id="container">
+    <div class="container">
         <div id="header">
             <nav  class="navbar navbar-default" role="navigation">
-                <a class="navbar-brand" href="<?php echo $this->url(array('controller' => 'index', 'action' => 'index'), null, true); ?>"><img  class="img-responsive" src="<?php echo $this->baseUrl('img/CapexOpex1.jpg'); ?>"></a>
+                <a class="navbar-brand" href="<?php echo $this->url(array('controller' => 'index', 'action' => 'index'), null, true); ?>"><img  class="img-responsive" src="<?php echo $this->baseUrl('img/CapexOpex1.png'); ?>"></a>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                         <span class="sr-only">Toggle navigation</span>
@@ -61,7 +61,14 @@
                     </button>
                 </div>
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <button data-toggle="modal" href="#loginModal" class="btn btn-default navbar-btn pull-right" ><?php echo $this->translate('login'); ?></button>
+                    <?php
+                    if (1 != $session->auth) {
+                        ?>    
+
+                        <button data-toggle="modal" href="#loginModal" class="btn btn-default navbar-btn pull-right" ><?php echo $this->translate('login'); ?></button>
+                        <?php
+                    }
+                    ?>
                     <ul class="nav navbar-nav pull-right">
                         <?php
                         if (1 == $session->auth) {
@@ -109,46 +116,52 @@
 
 
     <!-- Login form and script -->
-    <script>
-        $('body').on('click', '#signin-btn', function() {
-            $.post('<?php echo $this->url(array('controller' => 'auth', 'action' => 'auth'), null, true); ?>', $('#signin-form').serialize())
-                    .done(function(data) {
-                window.location.assign("<?php echo $this->url(array('controller' => 'index', 'action' => 'index'), null, true) ?>");
+    <?php
+    if (1 != $session->auth) {
+        ?>
+        <script>
+            $('body').on('click', '#signin-btn', function() {
+                $.post('<?php echo $this->url(array('controller' => 'auth', 'action' => 'auth'), null, true); ?>', $('#signin-form').serialize())
+                .done(function(data) {
+                    window.location.assign("<?php echo $this->url(array('controller' => 'index', 'action' => 'index'), null, true) ?>");
+                });
+                $("#loginModal").modal('hide');
             });
-            $("#loginModal").modal('hide');
-        });
-    </script>
+        </script>
 
-    <!-- Modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title"><?php echo $this->translate('login to system'); ?></h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal" role="form" id="signin-form">
-                        <div class="form-group">
-                            <label for="login" class="col-lg-4 control-label"><?php echo $this->translate('email'); ?></label>
-                            <div class="col-lg-8">
-                                <input type="email" class="form-control"id="login" name="login" placeholder="<?php echo $this->translate('email'); ?>">
+        <!-- Modal -->
+        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title"><?php echo $this->translate('login to system'); ?></h4>
+                    </div>
+                    <div class="modal-body">
+                        <form class="form-horizontal" role="form" id="signin-form">
+                            <div class="form-group">
+                                <label for="login" class="col-lg-4 control-label"><?php echo $this->translate('email'); ?></label>
+                                <div class="col-lg-8">
+                                    <input type="email" class="form-control"id="login" name="login" placeholder="<?php echo $this->translate('email'); ?>">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="password" class="col-lg-4 control-label"><?php echo $this->translate('password'); ?></label>
-                            <div class="col-lg-8">
-                                <input type="password" class="form-control" id="password" name="password" placeholder="<?php echo $this->translate('password'); ?>">
+                            <div class="form-group">
+                                <label for="password" class="col-lg-4 control-label"><?php echo $this->translate('password'); ?></label>
+                                <div class="col-lg-8">
+                                    <input type="password" class="form-control" id="password" name="password" placeholder="<?php echo $this->translate('password'); ?>">
+                                </div>
                             </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="signin-btn"><?php echo $this->translate('login'); ?></button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><?php echo $this->translate('close'); ?></button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-    <!-- End Login form and script -->
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="signin-btn"><?php echo $this->translate('login'); ?></button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><?php echo $this->translate('close'); ?></button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+        <!-- End Login form and script -->
+        <?php
+    }
+    ?>
 </body>
